<resources>
    <string name="app_name">Muviin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="API_KEY">ca4d19cf29014d6dfffca6e052c97eb2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster_image">Poster Image</string>
    <string name="change_layout">Change Layout</string>
    <string name="search">Search</string>
    <string name="movie">Movie</string>
    <string name="artist">Artist</string>
    <string name="setting">Settings</string>
    <string name="overview">Overview</string>
    <string name="title_activity_details">Details</string>
    <string name="action_settings">Settings</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="recomendation_movies">Recomendation Movies</string>
    <string name="trailer">Trailer</string>
    <string name="release_date">Release Date : </string>
    <string name="budget">Budget : </string>
    <string name="status">Status : </string>
    <string name="durations">Durations : </string>
    <string name="birthplace">Birthplace :</string>
    <string name="born">Born :</string>
    <string name="know_as">Know As :</string>
    <string name="biography">Biography</string>
</resources>
