<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtKnownAs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/know_as"
            android:layout_marginTop="5dp"
            android:textColor="@color/textMediumColor"/>
        <TextView
            android:id="@+id/txtKnown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/txtKnownAs"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/txtBorn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/born"
            android:layout_below="@id/txtKnown"
            android:layout_marginTop="5dp"
            android:textColor="@color/textMediumColor"/>
        <TextView
            android:id="@+id/txtBornDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtKnown"
            android:layout_toRightOf="@id/txtBorn"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/txtBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/birthplace"
            android:layout_below="@id/txtBorn"
            android:layout_marginTop="5dp"
            android:textColor="@color/textMediumColor"/>
        <TextView
            android:id="@+id/txtBirthPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBorn"
            android:layout_toRightOf="@id/txtBirth"
            android:layout_marginTop="5dp" />
        <TextView
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/biography"
            android:layout_below="@id/txtBirth"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
            android:id="@+id/txtBiography"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bio"/>
        <TextView
            android:id="@+id/txtMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Movies"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/txtBiography"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtMovie"/>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>